Fix JDK 17 deprecation warnings and build-time --add-opens
- Replace deprecated boxed primitive constructors with valueOf() in
  ZclDataUtil, ListAdjustmentsHandler, and IrisDropwizardExports
- Add missing @Deprecated annotation on
  RequestResponseMessageBus.invokeAndSendIfNotNull
- Remove deprecated SecurityManager usage in DaemonThreadFactory
- Add --add-opens to JavaExec and GroovyCompile tasks in subproject.gradle
  for JDK 17 build compatibility (Groovy ClassLoader.defineClass access)

All changes are Java 8+ compatible.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>